Fixed the align

--- a/review/dlr_tables2.css
+++ b/review/dlr_tables2.css
@@ -25,7 +25,7 @@ tr{
 }
 th, td{
    border: 1px solid gray;
-   align-content: top;
+   vertical-align: top;
    padding: 5px;
 }
 
@@ -66,7 +66,7 @@ thead th:nth-of-type(7), thead th:nth-of-type(8){
 tfoot{
    color: white;
    background-color: black;
-   
+
 }
 
 
